--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.3.5",
     "azure-ad-verify-token": "^3.0.1",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
     "google-auth-library": "^8.7.0",
     "nest-winston": "^1.9.1",
@@ -45,6 +46,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
